NetBSD Problem Report #42874

From www@NetBSD.org  Tue Feb 23 09:01:08 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id D890063C594
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 23 Feb 2010 09:01:08 +0000 (UTC)
Message-Id: <20100223090108.9F7E563C49F@www.NetBSD.org>
Date: Tue, 23 Feb 2010 09:01:08 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced } in external/ibm-public/postfix/dist/src/util/inet_addr_local.c
X-Send-Pr-Version: www-1.0

>Number:         42874
>Category:       bin
>Synopsis:       Misplaced } in external/ibm-public/postfix/dist/src/util/inet_addr_local.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 23 09:05:00 +0000 2010
>Closed-Date:    Tue Feb 23 16:41:38 +0000 2010
>Last-Modified:  Tue Feb 23 16:45:01 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Misplaced } in external/ibm-public/postfix/dist/src/util/inet_addr_local.c.
>How-To-Repeat:

>Fix:
diff -u -r1.1.1.1 inet_addr_local.c
--- external/ibm-public/postfix/dist/src/util/inet_addr_local.c	23 Jun 2009 10:09:00 -0000	1.1.1.1
+++ external/ibm-public/postfix/dist/src/util/inet_addr_local.c	14 Feb 2010 07:45:53 -0000
@@ -288,8 +288,9 @@
 		lifr = NEXT_INTERFACE(lifr);
 		continue;
 	    }
+	}
 #ifdef HAS_IPV6
-	} else if (af == AF_INET6) {
+	else if (af == AF_INET6) {
 	    if (IN6_IS_ADDR_UNSPECIFIED(&SOCK_ADDR_IN6_ADDR(sa))) {
 		lifr = NEXT_INTERFACE(lifr);
 		continue;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Tue, 23 Feb 2010 16:41:38 +0000
State-Changed-Why:
Fixed, thanks for the PR!


From: John Nemeth <jnemeth@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42874 CVS commit: src/external/ibm-public/postfix/dist/src/util
Date: Tue, 23 Feb 2010 16:41:01 +0000

 Module Name:	src
 Committed By:	jnemeth
 Date:		Tue Feb 23 16:41:01 UTC 2010

 Modified Files:
 	src/external/ibm-public/postfix/dist/src/util: inet_addr_local.c

 Log Message:
 PR/42874 - Henning Petersen -- misplaced }


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.2 \
     src/external/ibm-public/postfix/dist/src/util/inet_addr_local.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.