PR/42874 - Henning Petersen -- misplaced }